--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "svelte-app",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "rollup": "^1.12.0",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "svelte": "^3.0.0"
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-typescript": "^8.1.1",
+    "rollup": "^2.38.5",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "monaco-editor": "^0.22.3",
+    "postcss": "^8.2.4",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3",
+    "npm-run-all": "^4.1.5"
   },
-  "dependencies": {
-    "monaco-editor": "^0.18.1",
-    "sirv-cli": "^0.4.4"
-  },
+  "dependencies": {},
   "scripts": {
-    "build": "rollup -c",
+    "build": "NODE_ENV=production yarn _build",
+    "build-dev": "NODE_ENV=development yarn _build",
+    "_build": "rm -rf dist && rollup -c && cp node_modules/monaco-editor/monaco.d.ts dist/index.d.ts",
     "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public --single",
-    "start:dev": "sirv public --single --dev"
+    "dev": "run-p start:dev autobuild"
   }
 }
