--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
   "scripts": {
     "build": "NODE_ENV=production yarn _build",
     "build-dev": "NODE_ENV=development yarn _build",
-    "_build": "rm -rf dist && rollup -c && cp node_modules/monaco-editor/monaco.d.ts dist/index.d.ts",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild"
+    "_build": "rm -rf dist && rollup -c && cp node_modules/monaco-editor/monaco.d.ts dist/index.d.ts"
   }
 }
