--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "svelte-app",
-  "version": "2.0.0",
+  "name": "simple-rollup-monaco-builder",
+  "description": "Simple rollup config to build a customized esm version of monaco editor",
+  "version": "0.0.1",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
